assignments/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID error '{' feature_list '}' ';'

    7 feature_list: feature_list feature
    8             | ε
    9             | error ';'

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID ':' TYPEID ';'

   13 formal_list: formal_list ',' formal
   14            | formal
   15            | ε

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression '.' OBJECTID '(' expression_list ')'
   20           | OBJECTID '(' expression_list ')'
   21           | expression '@' TYPEID '.' OBJECTID '(' error ')'
   22           | expression '.' OBJECTID '(' error ')'
   23           | OBJECTID '(' error ')'
   24           | IF expression THEN expression ELSE expression FI
   25           | WHILE expression LOOP expression POOL
   26           | '{' expression_block '}'
   27           | LET let_expression
   28           | CASE error OF case_list ESAC
   29           | CASE expression OF error ESAC
   30           | CASE expression OF case_list ESAC
   31           | NEW TYPEID
   32           | ISVOID expression
   33           | expression '+' expression
   34           | expression '-' expression
   35           | expression '*' expression
   36           | expression '/' expression
   37           | '~' expression
   38           | expression '<' expression
   39           | expression LE expression
   40           | expression '=' expression
   41           | NOT expression
   42           | '(' expression ')'
   43           | OBJECTID
   44           | INT_CONST
   45           | STR_CONST
   46           | BOOL_CONST

   47 case_list: case
   48          | case_list case

   49 case: OBJECTID ':' TYPEID DARROW expression ';'

   50 expression_list: expression
   51                | expression_list ',' expression
   52                | ε

   53 expression_block: expression ';'
   54                 | expression_block expression ';'
   55                 | error ';'

   56 let_expression: OBJECTID ':' TYPEID IN expression
   57               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   58               | OBJECTID ':' TYPEID ',' let_expression
   59               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   60               | error ',' let_expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 10 18 19 20 21 22 23 42
    ')' (41) 10 18 19 20 21 22 23 42
    '*' (42) 35
    '+' (43) 33
    ',' (44) 13 51 58 59 60
    '-' (45) 34
    '.' (46) 18 19 21 22
    '/' (47) 36
    ':' (58) 10 11 12 16 49 56 57 58 59
    ';' (59) 4 5 6 9 10 11 12 49 53 54 55
    '<' (60) 38
    '=' (61) 40
    '@' (64) 18 21
    '{' (123) 4 5 6 10 26
    '}' (125) 4 5 6 10 26
    '~' (126) 37
    error (256) 6 9 21 22 23 28 29 55 60
    CLASS (258) 4 5 6
    ELSE (259) 24
    FI (260) 24
    IF (261) 24
    IN (262) 56 57
    INHERITS (263) 5
    LET (264) 27
    LOOP (265) 25
    POOL (266) 25
    THEN (267) 24
    WHILE (268) 25
    CASE (269) 28 29 30
    ESAC (270) 28 29 30
    OF (271) 28 29 30
    DARROW (272) 49
    NEW (273) 31
    ISVOID (274) 32
    STR_CONST <symbol> (275) 45
    INT_CONST <symbol> (276) 44
    BOOL_CONST <boolean> (277) 46
    TYPEID <symbol> (278) 4 5 6 10 11 12 16 18 21 31 49 56 57 58 59
    OBJECTID <symbol> (279) 10 11 12 16 17 18 19 20 21 22 23 43 49 56 57 58 59
    ASSIGN (280) 11 17 57 59
    NOT (281) 41
    LE (282) 39
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 6 7
    feature <feature> (50)
        on left: 10 11 12
        on right: 7
    formal_list <formals> (51)
        on left: 13 14 15
        on right: 10 13
    formal <formal> (52)
        on left: 16
        on right: 13 14
    expression <expression> (53)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 10 11 17 18 19 21 22 24 25 29 30 32 33 34 35 36 37 38 39 40 41 42 49 50 51 53 54 56 57 59
    case_list <cases> (54)
        on left: 47 48
        on right: 28 30 48
    case <case_> (55)
        on left: 49
        on right: 47 48
    expression_list <expressions> (56)
        on left: 50 51 52
        on right: 18 19 20 51
    expression_block <expressions> (57)
        on left: 53 54 55
        on right: 26 54
    let_expression <expression> (58)
        on left: 56 57 58 59 60
        on right: 27 58 59 60


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' feature_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS • TYPEID error '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    4 class: CLASS TYPEID • '{' feature_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID • error '{' feature_list '}' ';'

    error     shift, and go to state 8
    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 6

    0 $accept: program $end •

    $default  accept


State 7

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 8

    6 class: CLASS TYPEID error • '{' feature_list '}' ';'

    '{'  shift, and go to state 11


State 9

    5 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 10

    4 class: CLASS TYPEID '{' • feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 8 (feature_list)
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 14


State 11

    6 class: CLASS TYPEID error '{' • feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 8 (feature_list)
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 15


State 12

    5 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  shift, and go to state 16


State 13

    9 feature_list: error • ';'

    ';'  shift, and go to state 17


State 14

    4 class: CLASS TYPEID '{' feature_list • '}' ';'
    7 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 19

    feature  go to state 20


State 15

    6 class: CLASS TYPEID error '{' feature_list • '}' ';'
    7 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 21

    feature  go to state 20


State 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 8 (feature_list)
    '}'       reduce using rule 8 (feature_list)

    feature_list  go to state 22


State 17

    9 feature_list: error ';' •

    $default  reduce using rule 9 (feature_list)


State 18

   10 feature: OBJECTID • '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   11        | OBJECTID • ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID • ':' TYPEID ';'

    '('  shift, and go to state 23
    ':'  shift, and go to state 24


State 19

    4 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 25


State 20

    7 feature_list: feature_list feature •

    $default  reduce using rule 7 (feature_list)


State 21

    6 class: CLASS TYPEID error '{' feature_list '}' • ';'

    ';'  shift, and go to state 26


State 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    7 feature_list: feature_list • feature

    OBJECTID  shift, and go to state 18
    '}'       shift, and go to state 27

    feature  go to state 20


State 23

   10 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 28

    $default  reduce using rule 15 (formal_list)

    formal_list  go to state 29
    formal       go to state 30


State 24

   11 feature: OBJECTID ':' • TYPEID ASSIGN expression ';'
   12        | OBJECTID ':' • TYPEID ';'

    TYPEID  shift, and go to state 31


State 25

    4 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 4 (class)


State 26

    6 class: CLASS TYPEID error '{' feature_list '}' ';' •

    $default  reduce using rule 6 (class)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  shift, and go to state 32


State 28

   16 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 33


State 29

   10 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expression '}' ';'
   13 formal_list: formal_list • ',' formal

    ')'  shift, and go to state 34
    ','  shift, and go to state 35


State 30

   14 formal_list: formal •

    $default  reduce using rule 14 (formal_list)


State 31

   11 feature: OBJECTID ':' TYPEID • ASSIGN expression ';'
   12        | OBJECTID ':' TYPEID • ';'

    ASSIGN  shift, and go to state 36
    ';'     shift, and go to state 37


State 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  reduce using rule 5 (class)


State 33

   16 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 38


State 34

   10 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 39


State 35

   13 formal_list: formal_list ',' • formal

    OBJECTID  shift, and go to state 28

    formal  go to state 40


State 36

   11 feature: OBJECTID ':' TYPEID ASSIGN • expression ';'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 55


State 37

   12 feature: OBJECTID ':' TYPEID ';' •

    $default  reduce using rule 12 (feature)


State 38

   16 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 16 (formal)


State 39

   10 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 56


State 40

   13 formal_list: formal_list ',' formal •

    $default  reduce using rule 13 (formal_list)


State 41

   24 expression: IF • expression THEN expression ELSE expression FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 57


State 42

   27 expression: LET • let_expression

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let_expression  go to state 60


State 43

   25 expression: WHILE • expression LOOP expression POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 61


State 44

   28 expression: CASE • error OF case_list ESAC
   29           | CASE • expression OF error ESAC
   30           | CASE • expression OF case_list ESAC

    error       shift, and go to state 62
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 63


State 45

   31 expression: NEW • TYPEID

    TYPEID  shift, and go to state 64


State 46

   32 expression: ISVOID • expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 65


State 47

   45 expression: STR_CONST •

    $default  reduce using rule 45 (expression)


State 48

   44 expression: INT_CONST •

    $default  reduce using rule 44 (expression)


State 49

   46 expression: BOOL_CONST •

    $default  reduce using rule 46 (expression)


State 50

   17 expression: OBJECTID • ASSIGN expression
   20           | OBJECTID • '(' expression_list ')'
   23           | OBJECTID • '(' error ')'
   43           | OBJECTID •

    ASSIGN  shift, and go to state 66
    '('     shift, and go to state 67

    $default  reduce using rule 43 (expression)


State 51

   41 expression: NOT • expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 68


State 52

   37 expression: '~' • expression

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 69


State 53

   26 expression: '{' • expression_block '}'

    error       shift, and go to state 70
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression        go to state 71
    expression_block  go to state 72


State 54

   42 expression: '(' • expression ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression  go to state 73


State 55

   11 feature: OBJECTID ':' TYPEID ASSIGN expression • ';'
   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   21           | expression • '@' TYPEID '.' OBJECTID '(' error ')'
   22           | expression • '.' OBJECTID '(' error ')'
   33           | expression • '+' expression
   34           | expression • '-' expression
   35           | expression • '*' expression
   36           | expression • '/' expression
   38           | expression • '<' expression
   39           | expression • LE expression
   40           | expression • '=' expression

    LE   shift, and go to state 74
    '<'  shift, and go to state 75
    '='  shift, and go to state 76
    '+'  shift, and go to state 77
    '-'  shift, and go to state 78
    '*'  shift, and go to state 79
    '/'  shift, and go to state 80
    '@'  shift, and go to state 81
    '.'  shift, and go to state 82
    ';'  shift, and go to state 83


State 56

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID • '{' expression '}' ';'

    '{'  shift, and go to state 84


State 57

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   21           | expression • '@' TYPEID '.' OBJECTID '(' error ')'
   22           | expression • '.' OBJECTID '(' error ')'
   24           | IF expression • THEN expression ELSE expression FI
   33           | expression • '+' expression
   34           | expression • '-' expression
   35           | expression • '*' expression
   36           | expression • '/' expression
   38           | expression • '<' expression
   39           | expression • LE expression
   40           | expression • '=' expression

    THEN  shift, and go to state 85
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 58

   60 let_expression: error • ',' let_expression

    ','  shift, and go to state 86


State 59

   56 let_expression: OBJECTID • ':' TYPEID IN expression
   57               | OBJECTID • ':' TYPEID ASSIGN expression IN expression
   58               | OBJECTID • ':' TYPEID ',' let_expression
   59               | OBJECTID • ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 87


State 60

   27 expression: LET let_expression •

    $default  reduce using rule 27 (expression)


State 61

   18 expression: expression • '@' TYPEID '.' OBJECTID '(' expression_list ')'
   19           | expression • '.' OBJECTID '(' expression_list ')'
   21           | expression • '@' TYPEID '.' OBJECTID '(' error ')'
   22           | expression • '.' OBJECTID '(' error ')'
   25           | WHILE expression • LOOP expression POOL
   33           | expression • '+' expression
   34           | expression • '-' expression
   35           | expression • '*' expression
   36           | expression • '/' expression
   38           | expression • '<' expression
   39           | expression • LE expression
   40           | expression • '=' expression

    LOOP  shift, and go to state 88
    LE    shift, and go to state 74
    '<'   shift, and go to state 75
    '='   shift, and go to state 76
    '+'   shift, and go to state 77
    '-'   shift, and go to state 78
    '*'   shift, and go to state 79
    '/'   shift, and go to state 80
    '@'   shift, and go to state 81
    '.'   shift, and go to state 82


State 62

   28 expression: CASE error • OF case_list ESAC

    OF  shift, and go to state 89


State 63
